@@ -144,6 +144,8 @@ Version 2.1.1
         constants
    - Feature: Sorting of headers can be configured by the user
    - Feature: Context menus for expert dialog
+   - Don't save "port" and "folder" to config file (are set automatically by
+        other options)
 
 Version 2.1.0
  * Nicolas Rougier
